AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/istio/components/sas-transformations/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-data-discovery
spec:
  host: sas-data-discovery
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /dataDiscovery/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-discovery-table-provider
spec:
  host: sas-discovery-table-provider
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /discoveryTableProvider/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-transformations
spec:
  host: sas-transformations
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /transformations/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-transformations
    sas.com/admin: namespace
  name: sas-data-discovery
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataDiscovery
    - uri:
        prefix: /dataDiscovery/
    route:
    - destination:
        host: sas-data-discovery
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-transformations
    sas.com/admin: namespace
  name: sas-discovery-table-provider
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /discoveryTableProvider
    - uri:
        prefix: /discoveryTableProvider/
    route:
    - destination:
        host: sas-discovery-table-provider
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-transformations
    sas.com/admin: namespace
  name: sas-transformations
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /transformations
    - uri:
        prefix: /transformations/
    route:
    - destination:
        host: sas-transformations
    timeout: 300s
